--- a/src/containers/Hero/styles.css
+++ b/src/containers/Hero/styles.css
@@ -1,6 +1,7 @@
 .hero {
 	display: flex;
-	padding: 9rem 0;
+	flex-wrap: wrap-reverse;
+	padding: 9rem 0 22.2rem 0;
 }
 
 .hero-main {
@@ -10,15 +11,28 @@
 	align-items: start;
 }
 
-.hero-aside {
-	display: flex;
-	flex: 1 1;
-}
-
 .hero-description-text {
 	font-size: 2.2rem;
 	letter-spacing: 0.15px;
 	line-height: 3.6rem;
 	font-weight: 500;
 	padding-bottom: 3.8rem;
+}
+
+/* LARGE MOBILE/TABLET (768px / 16px = 48em) */
+@media (max-width: 48em) {
+	.hero {
+		padding: 0 0 16.8rem 0;
+	}
+
+	.hero-main {
+		align-items: center;
+	}
+
+	.hero-description-text {
+		font-size: 1.8rem;
+		line-height: 3rem;
+		letter-spacing: 0.123px;
+		text-align: center;
+	}
 }
