--- a/src/index.css
+++ b/src/index.css
@@ -146,6 +146,12 @@ p {
 
 /* LARGE MOBILE/TABLET (768px / 16px = 48em) */
 @media (max-width: 48em) {
+	h1 {
+		font-size: 4.2rem;
+		line-height: 4.8rem;
+		letter-spacing: -1.05px;
+		text-align: center;
+	}
 	h2 {
 		font-size: 2.8rem;
 	}
